crates/klyric-preview/check_error_3.txt
warning: unused imports: `Matrix` and `Path`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\particle_system.rs:2:45
  |
2 | use skia_safe::{Canvas, Color, Paint, Rect, Matrix, Path, Point, Image, BlendMode ...
  |                                             ^^^^^^  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ImageFilter`, `Image`, `Matrix`, `Path`, `Point`, and `Rect`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:2:39
  |
2 | ...t, Rect, Matrix, Path, Point, Image, Surface, BlendMode, PaintStyle, MaskFilter, BlurStyle, ImageFilter};
  |       ^^^^  ^^^^^^  ^^^^  ^^^^^  ^^^^^                                                         ^^^^^^^^^^^

warning: unused imports: `Paint` and `Surface`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\mod.rs:6:17
  |
6 | use skia_safe::{Surface, Canvas, Color, Paint, ImageInfo, ColorType, AlphaType, su...
  |                 ^^^^^^^                 ^^^^^

warning: unused import: `Point`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:4:59
  |
4 | use skia_safe::{Font, Typeface, FontMgr, FontStyle, Data, Point, Path};
  |                                                           ^^^^^

warning: use of deprecated associated function `skia_safe::surface::<impl skia_safe::RCHandle<skia_bindings::SkSurface>>::new_raster_n32_premul`: use surfaces::raster_n32_premul()
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:354:62
    |
354 | ...   if let Some(mut surface) = Surface::new_raster_n32_premul((capture_w, capt...
    |                                           ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: unused variable: `idx`
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:48:14
   |
48 |         for (idx, glyph) in glyphs.iter().enumerate() {
   |              ^^^ help: if this is intentional, prefix it with an underscore: `_idx`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `tx`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:357:34
    |
357 | ...                   let tx = (capture_w as f32 / 2.0) - cx;
    |                           ^^ help: if this is intentional, prefix it with an underscore: `_tx`

warning: unused variable: `ty`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:358:34
    |
358 | ...                   let ty = (capture_h as f32 / 2.0) - cy; // - bounds.top?
    |                           ^^ help: if this is intentional, prefix it with an underscore: `_ty`

warning: unused variable: `glyph_id`
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:87:13
   |
87 |         let glyph_id = font.unichar_to_glyph(ch as i32);
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_glyph_id`

warning: unused variable: `family`
   --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\text.rs:130:27
    |
130 |     pub fn find_font_file(family: &str) -> Option<PathBuf> {
    |                           ^^^^^^ help: if this is intentional, prefix it with an underscore: `_family`

warning: `klyric-renderer` (lib) generated 10 warnings (run `cargo fix --lib -p klyric-renderer` to apply 9 suggestions)
    Checking klyric-preview v0.1.0 (D:\Workspace\lyric_video_maker_claude\crates\klyric-preview)
warning: unused import: `Context`
 --> src\main.rs:1:22
  |
1 | use anyhow::{Result, Context};
  |                      ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `GlProfile` and `SwapInterval`
 --> src\main.rs:4:41
  |
4 |     context::{ContextAttributesBuilder, GlProfile, NotCurrentGlContext},
  |                                         ^^^^^^^^^
5 |     display::{GetGlDisplay, GlDisplay},
6 |     surface::{GlSurface, SwapInterval, WindowSurface},
  |                          ^^^^^^^^^^^^

warning: unused import: `GlWindow`
 --> src\main.rs:8:36
  |
8 | use glutin_winit::{DisplayBuilder, GlWindow};
  |                                    ^^^^^^^^

warning: unused imports: `KeyEvent`, `Key`, and `NamedKey`
  --> src\main.rs:11:33
   |
11 |     event::{Event, WindowEvent, KeyEvent},
   |                                 ^^^^^^^^
...
14 |     keyboard::{Key, NamedKey},
   |                ^^^  ^^^^^^^^

warning: unused import: `gl::Interface`
  --> src\main.rs:18:23
   |
18 | use skia_safe::{gpu::{gl::Interface, DirectContext, SurfaceOrigin, Protected}, ColorType, Surface};
   |                       ^^^^^^^^^^^^^

warning: unused import: `anyhow::Result`
 --> src\app.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

warning: unused import: `text::TextRenderer`
 --> src\app.rs:5:5
  |
5 |     text::TextRenderer,
  |     ^^^^^^^^^^^^^^^^^^

error[E0599]: the method `anyhow_kind` exists for reference `&Box<dyn StdError>`, but its trait bounds were not satisfied
  --> src\main.rs:49:20
   |
49 |     }).map_err(|e| anyhow::anyhow!(e))?;
   |                    ^^^^^^^^^^^^^^^^^^ method cannot be called on `&Box<dyn StdError>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Box<dyn StdError>: Into<anyhow::Error>`
           which is required by `Box<dyn StdError>: anyhow::kind::TraitKind`
           `Box<dyn StdError>: Send`
           which is required by `&Box<dyn StdError>: anyhow::kind::AdhocKind`
           `Box<dyn StdError>: Sync`
           which is required by `&Box<dyn StdError>: anyhow::kind::AdhocKind`
           `&Box<dyn StdError>: Into<anyhow::Error>`
           which is required by `&Box<dyn StdError>: anyhow::kind::TraitKind`
           `dyn StdError: Sized`
           which is required by `dyn StdError: anyhow::kind::TraitKind`
           `dyn StdError: Into<anyhow::Error>`
           which is required by `dyn StdError: anyhow::kind::TraitKind`
   = note: this error originates in the macro `anyhow::anyhow` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: use of deprecated associated function `skia_safe::gpu::direct_context::<impl skia_safe::RCHandle<skia_bindings::GrDirectContext>>::new_gl`: use gpu::direct_contexts::make_gl()
  --> src\main.rs:85:41
   |
85 |     let mut gr_context = DirectContext::new_gl(Some(interface), None).expect("Failed to create Skia Context");
   |                                         ^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0277]: the trait bound `RCHandle<GrGLInterface>: From<Option<RCHandle<GrGLInterface>>>` is not satisfied
  --> src\main.rs:85:48
   |
85 |     let mut gr_context = DirectContext::new_gl(Some(interface), None).expect("Failed to create Skia Context");
   |                          --------------------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |                          |
   |                          required by a bound introduced by this call
   |
   = help: the trait `From<std::option::Option<RCHandle<skia_bindings::GrGLInterface>>>` is not implemented for `RCHandle<skia_bindings::GrGLInterface>`
   = help: the following other types implement trait `From<T>`:
             `RCHandle<N>` implements `From<&RCHandle<N>>`
             `RCHandle<skia_bindings::GrRecordingContext>` implements `From<RCHandle<skia_bindings::GrDirectContext>>`
             `RCHandle<skia_bindings::SkBlender>` implements `From<skia_safe::BlendMode>`
             `RCHandle<skia_bindings::SkFontMgr>` implements `From<RCHandle<skia_bindings::SkOrderedFontMgr>>`
             `RCHandle<skia_bindings::SkFontMgr>` implements `From<RCHandle<skia_bindings::skia_textlayout_TypefaceFontProvider>>`
   = note: required for `std::option::Option<RCHandle<skia_bindings::GrGLInterface>>` to implement `Into<RCHandle<skia_bindings::GrGLInterface>>`
note: required by a bound in `gpu::direct_context::<impl RCHandle<skia_bindings::GrDirectContext>>::new_gl`
  --> C:\Users\Lim Hong Yun\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\skia-safe-0.75.0\src\gpu\direct_context.rs:89:25
   |
88 |     pub fn new_gl<'a>(
   |            ------ required by a bound in this associated function
89 |         interface: impl Into<gl::Interface>,
   |                         ^^^^^^^^^^^^^^^^^^^ required by this bound in `gpu::direct_context::<impl RCHandle<GrDirectContext>>::new_gl`
   = note: the full name for the type has been written to 'D:\Workspace\lyric_video_maker_claude\crates\klyric-preview\target\debug\deps\klyric_preview-2b1938ff55634565.long-type-465023686834870516.txt'
   = note: consider using `--verbose` to print the full type name to the console

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `klyric-preview` (bin "klyric-preview") generated 8 warnings
error: could not compile `klyric-preview` (bin "klyric-preview") due to 2 previous errors; 8 warnings emitted
